--- a/dashboard.html
+++ b/dashboard.html
@@ -135,6 +135,10 @@
                                     <td>50</td>
                                 </tr>
                             </table>
+
+                            <div class="chart-container">
+                                <canvas id="nftChart"></canvas>
+                            </div>
                         </div>
                     </div>
 
@@ -193,7 +197,7 @@
                         <span class="wps-colBox-cents">60</span>
                     </div>
                     <div class="wps-colBox-bottomInfo">
-                        <div class="wps-period-detail wps-period-detail-green"><span class="icon"></span>+15% Period</div>
+                        <div class="wps-period-detail wps-period-detail-red"><span class="icon"></span>-15% Period</div>
                         <a href="#" class="wps-colBox-seeDetails">See details</a>
                     </div>
                 </div>
@@ -261,6 +265,10 @@
                                     <td>50</td>
                                 </tr>
                             </table>
+
+                            <div class="chart-container">
+                                <canvas id="stakingsChart"></canvas>
+                            </div>
                         </div>
                     </div>
 
@@ -387,6 +395,10 @@
                                     <td>50</td>
                                 </tr>
                             </table>
+
+                            <div class="chart-container">
+                                <canvas id="crowfundingChart"></canvas>
+                            </div>
                         </div>
                     </div>
 
@@ -445,7 +457,7 @@
                         <span class="wps-colBox-cents">60</span>
                     </div>
                     <div class="wps-colBox-bottomInfo">
-                        <div class="wps-period-detail wps-period-detail-green"><span class="icon"></span>+15% Period</div>
+                        <div class="wps-period-detail wps-period-detail-red"><span class="icon"></span>-20% Period</div>
                         <a href="#" class="wps-colBox-seeDetails">See details</a>
                     </div>
                 </div>
@@ -513,6 +525,10 @@
                                     <td>50</td>
                                 </tr>
                             </table>
+
+                            <div class="chart-container">
+                                <canvas id="tokensChart"></canvas>
+                            </div>
                         </div>
                     </div>
 
@@ -561,6 +577,9 @@
     <script src="./js/dropdown.js"></script>
     <script src="./js/wps-theme.js"></script>
     <script src="./js/accordeon.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="./js/charts.js"></script>
     <!-- <script src="./js/secondary-nav.js"></script> -->
 
     
