--- a/dashboard.html
+++ b/dashboard.html
@@ -703,30 +703,30 @@
             <div class="wps-footer-col">
                 <h2 class="wps-footer-heading">Info</h2>
                 <ul>
+                    <li><a href="#">Item 1 Item 1 Item 1 Item 1 Item 1</a></li>
+                    <li><a href="#">Item 1 Item 1 Item 1</a></li>
                     <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 1</a></li>
-                </ul>
-            </div>
-            <div class="wps-footer-col">
-                <h2 class="wps-footer-heading">Info</h2>
-                <ul>
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 1</a></li>
+                    <li><a href="#">Item 1 Item 1 Item 1 </a></li>
                     <li><a href="#">Item 1</a></li>
                 </ul>
             </div>
             <div class="wps-footer-col">
                 <h2 class="wps-footer-heading">Info</h2>
                 <ul>
+                    <li><a href="#">Item 1 Item 1 Item 1 Item 1 Item 1</a></li>
+                    <li><a href="#">Item 1 Item 1 Item 1</a></li>
                     <li><a href="#">Item 1</a></li>
+                    <li><a href="#">Item 1 Item 1 Item 1 </a></li>
                     <li><a href="#">Item 1</a></li>
+                </ul>
+            </div>
+            <div class="wps-footer-col">
+                <h2 class="wps-footer-heading">Info</h2>
+                <ul>
+                    <li><a href="#">Item 1 Item 1 Item 1 Item 1 Item 1</a></li>
+                    <li><a href="#">Item 1 Item 1 Item 1</a></li>
                     <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 1</a></li>
+                    <li><a href="#">Item 1 Item 1 Item 1 </a></li>
                     <li><a href="#">Item 1</a></li>
                 </ul>
             </div>
