step 2 claro, completo

--- a/step2.html
+++ b/step2.html
@@ -220,17 +220,106 @@
                         </div>
 
                         <div class="wps-boxes">
+
                             <div class="wps-box">
-                                aaaaaaaa
+                                <div class="wps-layer-tag">Layer 1</div>
+                                <div class="wps-box-tag">Mainnet</div>
+                                <h2 class="wps-box-title"><span class="wps-box-title-icon"></span> Ethereum</h2>
+                                <div class="wps-box-text">The biggest Smart Sontract Platform</div>
+                                <div class="wps-box-content-inner">
+                                    <table class="wps-real-table">
+                                        <tr>
+                                        <th>TECHNOLOGY</th>
+                                        <th>BLOCKCHAIN</th>
+                                        </tr>
+                                        <tr>
+                                        <td>Native Coin</td>
+                                        <td>Ether ($1819.79**)</td>
+                                        </tr>
+                                    </table>
+                                    <div class="wps-fee-info">
+                                        <p><img src="./img/right-arrow-light-green.svg"> Fee: ETH 0.3*</p>
+                                        <p><img src="./img/right-arrow-light-green.svg"> $545.94**</p>
+                                    </div>
+                                    <div class="wps-box-ctas">
+                                        <a href="#" class="wps-btn">Buy Ether</a>
+                                        <a href="#" class="wps-btn">More info</a>
+                                    </div>
+                                    <div class="wps-box-ctas">
+                                        <a href="#" class="wps-btn">Switch to network</a>
+                                    </div>
+                                    <div class="wps-box-ctas">
+                                        <a href="#" class="wps-btn wps-btn-full">Continue</a>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="wps-box">
-                                aaaaaaaa
+                                <div class="wps-layer-tag">Layer 1</div>
+                                <div class="wps-box-tag">Mainnet</div>
+                                <h2 class="wps-box-title"><span class="wps-box-title-icon"></span> Ethereum</h2>
+                                <div class="wps-box-text">The biggest Smart Sontract Platform</div>
+                                <div class="wps-box-content-inner">
+                                    <table class="wps-real-table">
+                                        <tr>
+                                        <th>TECHNOLOGY</th>
+                                        <th>BLOCKCHAIN</th>
+                                        </tr>
+                                        <tr>
+                                        <td>Native Coin</td>
+                                        <td>Ether ($1819.79**)</td>
+                                        </tr>
+                                    </table>
+                                    <div class="wps-fee-info">
+                                        <p><img src="./img/right-arrow-light-green.svg"> Fee: ETH 0.3*</p>
+                                        <p><img src="./img/right-arrow-light-green.svg"> $545.94**</p>
+                                    </div>
+                                    <div class="wps-box-ctas">
+                                        <a href="#" class="wps-btn">Buy Ether</a>
+                                        <a href="#" class="wps-btn">More info</a>
+                                    </div>
+                                    <div class="wps-box-ctas">
+                                        <a href="#" class="wps-btn">Switch to network</a>
+                                    </div>
+                                    <div class="wps-box-ctas">
+                                        <a href="#" class="wps-btn wps-btn-full">Continue</a>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="wps-box">
-                                aaaaaaaa
+                                <div class="wps-layer-tag">Layer 1</div>
+                                <div class="wps-box-tag">Mainnet</div>
+                                <h2 class="wps-box-title"><span class="wps-box-title-icon"></span> Ethereum</h2>
+                                <div class="wps-box-text">The biggest Smart Sontract Platform</div>
+                                <div class="wps-box-content-inner">
+                                    <table class="wps-real-table">
+                                        <tr>
+                                        <th>TECHNOLOGY</th>
+                                        <th>BLOCKCHAIN</th>
+                                        </tr>
+                                        <tr>
+                                        <td>Native Coin</td>
+                                        <td>Ether ($1819.79**)</td>
+                                        </tr>
+                                    </table>
+                                    <div class="wps-fee-info">
+                                        <p><img src="./img/right-arrow-light-green.svg"> Fee: ETH 0.3*</p>
+                                        <p><img src="./img/right-arrow-light-green.svg"> $545.94**</p>
+                                    </div>
+                                    <div class="wps-box-ctas">
+                                        <a href="#" class="wps-btn">Buy Ether</a>
+                                        <a href="#" class="wps-btn">More info</a>
+                                    </div>
+                                    <div class="wps-box-ctas">
+                                        <a href="#" class="wps-btn">Switch to network</a>
+                                    </div>
+                                    <div class="wps-box-ctas">
+                                        <a href="#" class="wps-btn wps-btn-full">Continue</a>
+                                    </div>
+                                </div>
                             </div>
+
                         </div>
                     </div>
 
