Diseño 2, tema oscuro

--- a/step2.html
+++ b/step2.html
@@ -142,10 +142,12 @@
             <!-- WSP GRID -->
             <div class="wps-inner-content">
 
-                <div class="wps-description-box">
-                    <h2 class="wps-box-heading">Create your NFT collection in three easy steps</h2>
-                    <p class="wps-box-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sodales, libero eget venenatis lacinia,
-                        purus enim eleifend neque, id malesuada sem leo nec metus.</p>
+                <div class="wps-description-box-out-border">
+                    <div class="wps-description-box">
+                        <h2 class="wps-box-heading">Create your NFT collection in three easy steps</h2>
+                        <p class="wps-box-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sodales, libero eget venenatis lacinia,
+                            purus enim eleifend neque, id malesuada sem leo nec metus.</p>
+                    </div>
                 </div>
 
                 <!-- STEPS -->
@@ -324,6 +326,11 @@
                     </div>
 
                     <div class="wps-step-content wps-step-three">smart contract options</div>
+                </div>
+
+                <div class="help-box">
+                    <h2 class="wps-help-title">Need help?</h2>
+                    <a href="#" class="wps-help-link">Read the documentation</a>
                 </div>
             </div>
 
