--- a/dashboard.html
+++ b/dashboard.html
@@ -146,10 +146,10 @@
 
                     <div class="wps-dash-column">
 
-                        <div class="wps-accordion wps-accordion-btn" id="first-accordion">NFTS</div>
+                        <!-- <div class="wps-accordion wps-accordion-btn" id="first-accordion">NFTS</div> -->
                         <!-- NFT column -->
-                        <div class="wps-panel">
-                            <div class="wps-column-box nft-dashboard">
+                        <div class="wps-panel-aaa">
+                            <div class="wps-accordion wps-column-box nft-dashboard">
                                 <div class="wps-colBox-title-lg"><img src="./img/nfts-logo.svg">NFTS <span class="wps-mobile-direction">Click to open</span></div>
                                 <div class="wps-colBox-top">
                                     <p>Gross sales</p>
@@ -169,7 +169,7 @@
                                     <a href="#" class="wps-colBox-seeDetails">See details</a>
                                 </div>
                             </div>
-                            <div class="wps-panel-content">
+                            <div class="wps-panel wps-panel-content">
                                 <div class="wps-column-box wps-column-box-inner">
                                     <div class="wps-colBox-title-lg wps-colBox-title-inner">Smart Contracts</div>
 
@@ -313,10 +313,10 @@
                     </div>
 
                     <div class="wps-dash-column">
-                        <div class="wps-accordion wps-accordion-btn">STAKINGS</div>
+                        <!-- <div class="wps-accordion wps-accordion-btn">STAKINGS</div> -->
                         <!-- STAKINGS column -->
-                        <div class="wps-panel">
-                            <div class="wps-column-box stakings-dashboard">
+                        <div class="wps-panel-aaa">
+                            <div class="wps-accordion wps-column-box stakings-dashboard">
                                 <div class="wps-colBox-title-lg"><img src="./img/stakings-logo.svg">STAKINGS <span class="wps-mobile-direction">Click to open</span></div>
                                 <div class="wps-colBox-top">
                                     <p>Gross sales</p>
@@ -336,7 +336,7 @@
                                     <a href="#" class="wps-colBox-seeDetails">See details</a>
                                 </div>
                             </div>
-                            <div class="wps-panel-content">
+                            <div class="wps-panel wps-panel-content">
                                 <div class="wps-column-box wps-column-box-inner">
                                     <div class="wps-colBox-title-lg wps-colBox-title-inner">Smart Contracts</div>
 
@@ -480,10 +480,10 @@
 
                     <div class="wps-dash-column">
 
-                        <div class="wps-accordion wps-accordion-btn">CROWNFUNDIG</div>
+                        <!-- <div class="wps-accordion wps-accordion-btn">CROWNFUNDIG</div> -->
                         <!-- CROWFUNDINGS column -->
-                        <div class="wps-panel">
-                            <div class="wps-column-box crowdfundings-dashboard">
+                        <div class="wps-panel-aaa">
+                            <div class="wps-accordion wps-column-box crowdfundings-dashboard">
                                 <div class="wps-colBox-title-lg"><img src="./img/crowfundings-logo.svg">CROWFUNDINGS <span class="wps-mobile-direction">Click to open</span></div>
                                 <div class="wps-colBox-top">
                                     <p>Gross sales</p>
@@ -503,7 +503,7 @@
                                     <a href="#" class="wps-colBox-seeDetails">See details</a>
                                 </div>
                             </div>
-                            <div class="wps-panel-content">
+                            <div class="wps-panel wps-panel-content">
                                 <div class="wps-column-box wps-column-box-inner">
                                     <div class="wps-colBox-title-lg wps-colBox-title-inner">Smart Contracts</div>
 
@@ -646,10 +646,10 @@
                     </div>
 
                     <div class="wps-dash-column">
-                        <div class="wps-accordion wps-accordion-btn">TOKENS</div>
+                        <!-- <div class="wps-accordion wps-accordion-btn">TOKENS</div> -->
                         <!-- TOKENS column -->
-                        <div class="wps-panel">
-                            <div class="wps-column-box tokens-dashboard">
+                        <div class="wps-panel-aaa">
+                            <div class="wps-accordion wps-column-box tokens-dashboard">
                                 <div class="wps-colBox-title-lg"><img src="./img/tokens-logo.svg">TOKENS <span class="wps-mobile-direction">Click to open</span></div>
                                 <div class="wps-colBox-top">
                                     <p>Gross sales</p>
@@ -669,7 +669,7 @@
                                     <a href="#" class="wps-colBox-seeDetails">See details</a>
                                 </div>
                             </div>
-                            <div class="wps-panel-content">
+                            <div class="wps-panel wps-panel-content">
                                 <div class="wps-column-box wps-column-box-inner">
                                     <div class="wps-colBox-title-lg wps-colBox-title-inner">Smart Contracts</div>
 
