--- a/dashboard.html
+++ b/dashboard.html
@@ -150,7 +150,7 @@
                         <!-- NFT column -->
                         <div class="wps-panel-aaa">
                             <div class="wps-accordion wps-column-box nft-dashboard">
-                                <div class="wps-colBox-title-lg"><img src="./img/nfts-logo.svg">NFTS <span class="wps-mobile-direction">Click to open</span></div>
+                                <div class="wps-colBox-title-lg"><img src="./img/nfts-logo.svg">NFTS <span class="wps-mobile-direction">[ + ]</span></div>
                                 <div class="wps-colBox-top">
                                     <p>Gross sales</p>
                                     <!-- Each select should have an unique ID -->
@@ -317,7 +317,7 @@
                         <!-- STAKINGS column -->
                         <div class="wps-panel-aaa">
                             <div class="wps-accordion wps-column-box stakings-dashboard">
-                                <div class="wps-colBox-title-lg"><img src="./img/stakings-logo.svg">STAKINGS <span class="wps-mobile-direction">Click to open</span></div>
+                                <div class="wps-colBox-title-lg"><img src="./img/stakings-logo.svg">STAKINGS <span class="wps-mobile-direction">[ + ]</span></div>
                                 <div class="wps-colBox-top">
                                     <p>Gross sales</p>
                                     <!-- Each select should have an unique ID -->
@@ -484,7 +484,7 @@
                         <!-- CROWFUNDINGS column -->
                         <div class="wps-panel-aaa">
                             <div class="wps-accordion wps-column-box crowdfundings-dashboard">
-                                <div class="wps-colBox-title-lg"><img src="./img/crowfundings-logo.svg">CROWFUNDINGS <span class="wps-mobile-direction">Click to open</span></div>
+                                <div class="wps-colBox-title-lg"><img src="./img/crowfundings-logo.svg">CROWFUNDINGS <span class="wps-mobile-direction">[ + ]</span></div>
                                 <div class="wps-colBox-top">
                                     <p>Gross sales</p>
                                     <!-- Each select should have an unique ID -->
@@ -650,7 +650,7 @@
                         <!-- TOKENS column -->
                         <div class="wps-panel-aaa">
                             <div class="wps-accordion wps-column-box tokens-dashboard">
-                                <div class="wps-colBox-title-lg"><img src="./img/tokens-logo.svg">TOKENS <span class="wps-mobile-direction">Click to open</span></div>
+                                <div class="wps-colBox-title-lg"><img src="./img/tokens-logo.svg">TOKENS <span class="wps-mobile-direction">[ + ]</span></div>
                                 <div class="wps-colBox-top">
                                     <p>Gross sales</p>
                                     <!-- Each select should have an unique ID -->
