--- a/step2.html
+++ b/step2.html
@@ -226,7 +226,7 @@
                             <div class="wps-box">
                                 <div class="wps-layer-tag">Layer 1</div>
                                 <div class="wps-box-tag">Mainnet</div>
-                                <h2 class="wps-box-title"><span class="wps-box-title-icon"></span> Ethereum</h2>
+                                <h2 class="wps-box-title"><span class="wps-box-title-icon ethereum"></span> Ethereum</h2>
                                 <div class="wps-box-text">The biggest Smart Sontract Platform</div>
                                 <div class="wps-box-content-inner">
                                     <table class="wps-real-table">
