--- a/step2.html
+++ b/step2.html
@@ -64,7 +64,7 @@
         <!-- WPS CONTENT -->
         <div class="wps-content-page">
             <!-- MAIN NAV -->
-            <nav class="wps-main-nav">
+            <nav class="wps-main-nav wps-main-nav-principal">
                 <div class="left">
                     <div class="wps-logo wps-mobile"><img src="./img/wp-smart-contracts-logo-figure-black.png"></div>
                     <ul class="wps-breadcrumb">
